--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
 <a class=nav-link href=/about><span>About me</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/projects><span>Projects</span></a>
-</li>
-<li class=nav-item>
-<a class=nav-link href=/#talks data-target=#talks><span>Talks</span></a>
+<a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/#featured data-target=#featured><span>Publications</span></a>
