--- a/project/diffmem/index.html
+++ b/project/diffmem/index.html
@@ -70,10 +70,7 @@
 <a class=nav-link href=/about><span>About me</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/projects><span>Projects</span></a>
-</li>
-<li class=nav-item>
-<a class=nav-link href=/#talks><span>Talks</span></a>
+<a class="nav-link active" href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/#featured><span>Publications</span></a>
