--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 <div class="col-12 col-lg-8">
 <h1>Biography</h1>
 <div class=article-style>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.</p>
-<p>
+<p>Silvia Papalini is a Ph.D. student currently working at the KULeuven University, Belgium, and a Mindful Eating teacher in training since 2018. Her area of research focus on fear and reward-based learning & behaviors within the context of nutritional and behavioral neuroscience (functional Magnetic Resonance Imaging, fMRI), fasting and stress.
 <i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/uploads/demo_resume.pdf target=_blank>resumé</a>.</p>
 </div>
 <div class=row>
