--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
-<meta name=description content="Accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first PhD in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
+<meta name=description content="My accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first PhD in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/about/>
 <meta name=theme-color content="#1565c0">
 <link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
@@ -24,7 +24,7 @@
 <meta property="og:site_name" content="Silvia Papalini">
 <meta property="og:url" content="https://silviapapalini.github.io/about/">
 <meta property="og:title" content="About me | Silvia Papalini">
-<meta property="og:description" content="Accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first PhD in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
+<meta property="og:description" content="My accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first PhD in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
 <title>About me | Silvia Papalini</title>
 </head>
@@ -92,7 +92,7 @@
 </div>
 <div class=article-container>
 <div class=article-style>
-<h2 id=accademic-path>Accademic path</h2>
+<h2 id=my-accademic-path>My accademic path</h2>
 <p>I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first PhD in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans. I developed my scientific knowledge on reward-processing and neuroimaging skills also working in collaboration with the Maastricht University (The Netherlands) via an Erasmus+ European grant. In 2016, I became a member of the &lsquo;Food and Cognition group&rsquo; at the Donders Institute (The Netherlands) where I investigated the effects of a probiotics diet on neuro-cognition and stress, with a focus on cognitive control mechanisms. Since 2018, I started a second PhD at KULeuven with the aim to translate knowledge from fundamental research to the clinical field.</p>
 <h2 id=my-research>My research</h2>
 <p>The final aim of my research is to help people that struggele with excessive anxiety and emotional (non)eating. I am fascinated by the bidirectional relationship between food and learning. Currently, I am investigating the effects of overnight fasting and the role of dopamine-mediated mechanisms (i.e., relief) on conditioning, error-based learning and instrumental avoidance. I am conducting research in healthy individuals as well as in individuals with pathological control and excessive avoidance behaviors (i.e., anorexia nervosa and obsessive-compulsive disorder). In my research, I like to apply an interdisciplinary approach, integrating behavioral research, nutritional science, and neuroimaging (3TfMRI). To transfer my scientific knowledge to the applied field I have participated in the Mindful Eating professional training (ME-CL1) and became a Mindful Eating teacher in training.</p>
