--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
 <li><a href=/slides/example/>Slides</a></li>
 <li><a href=/slides/>Slides</a></li>
 <li><a href=/project/hpc/>High-performance Computing</a></li>
-<li><a href=/project/diffmem/>DiffMEM</a></li>
+<li><a href=/project/diffmem/>The power of hunger</a></li>
 <li><a href=/mindfulness/>Mindfulness Eating</a></li>
 <li><a href=/publication/>Publications</a></li>
 </ul>
