--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@ Software and language design for high-performance computing
 </div>
 </div>
 </div>
-<div class="col-12 isotope-item js-id-Non-linear js-id-Mixed-effects-models js-id-High-Performance-Computing js-id-Parallel">
+<div class="col-12 isotope-item">
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/project/diffmem/>DiffMEM</a>
+<a href=/project/diffmem/>The power of hunger</a>
 </div>
 <a href=/project/diffmem/ class=summary-link>
 <div class=article-style>
-Scalable Differential equation based Mixed-Effects modelling
+Fasting bolster brainpower. We are investigating fasting&rsquo;s effects on instrumental avoidance learning and error-based learning (fear extinction).
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -210,7 +210,7 @@ Scalable Differential equation based Mixed-Effects modelling
 </div>
 <div class=ml-3>
 <a href=/project/diffmem/>
-<img src=/project/diffmem/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_224363_150x0_resize_q75_h2_lanczos.webp height=84 width=150 alt=DiffMEM loading=lazy>
+<img src=/project/diffmem/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_224363_150x0_resize_q75_h2_lanczos.webp height=84 width=150 alt="The power of hunger" loading=lazy>
 </a>
 </div>
 </div>
