deploy: 2793603e735c0c9a27a7fa05f20c47bdf5092f96

--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
 <li><a href=/project/>Projects</a></li>
 <li><a href=/slides/example/>Slides</a></li>
 <li><a href=/slides/>Slides</a></li>
-<li><a href=/project/hpc/>High-performance Computing</a></li>
+<li><a href=/project/hpc/>Avoid food to control fear</a></li>
 <li><a href=/project/diffmem/>The power of hunger</a></li>
 <li><a href=/mindfulness/>Mindfulness Eating</a></li>
 <li><a href=/publication/>Publications</a></li>
