--- a/index.html
+++ b/index.html
@@ -173,23 +173,23 @@ Software package for scalable analysis and exploration of single-cell RNA-seq da
 </div>
 </div>
 </div>
-<div class="col-12 isotope-item js-id-High-Performance-Computing js-id-Parallel js-id-Language-design js-id-Alogrithms">
+<div class="col-12 isotope-item">
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/project/hpc/>High-performance Computing</a>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/avoid-food-to-control-fear target=_blank rel=noopener>Avoid food to control fear</a>
 </div>
-<a href=/project/hpc/ class=summary-link>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/avoid-food-to-control-fear target=_blank rel=noopener class=summary-link>
 <div class=article-style>
-Software and language design for high-performance computing
+We investigate the mechanisms underpinning excessive avoidance behaviors in Anorexia Nervosa (AN).
 </div>
 </a>
 <div class="stream-meta article-metadata">
 </div>
 </div>
 <div class=ml-3>
-<a href=/project/hpc/>
-<img src=/project/hpc/featured_hue540b11a67bd9cb39e059f545e8bf649_5639876_150x0_resize_q75_h2_lanczos.webp height=100 width=150 alt="High-performance Computing" loading=lazy>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/avoid-food-to-control-fear target=_blank rel=noopener>
+<img src=/project/hpc/featured_hue540b11a67bd9cb39e059f545e8bf649_5639876_150x0_resize_q75_h2_lanczos.webp height=100 width=150 alt="Avoid food to control fear" loading=lazy>
 </a>
 </div>
 </div>
