deploy: e1874bb19a37d4d58319b5a6a5830bf933f3059b

--- a/404.html
+++ b/404.html
@@ -94,10 +94,10 @@
 <ul>
 <li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/example-talk/>Example Talk</a></li>
-<li><a href=/project/severo/>Severo.jl</a></li>
-<li><a href=/project/>Projects</a></li>
 <li><a href=/slides/example/>Slides</a></li>
 <li><a href=/slides/>Slides</a></li>
+<li><a href=/project/severo/>The neurocircuitry of relief in pathological avoidance</a></li>
+<li><a href=/project/>Projects</a></li>
 <li><a href=/project/hpc/>Avoid food to control fear</a></li>
 <li><a href=/project/diffmem/>The power of hunger</a></li>
 <li><a href=/mindfulness/>Mindfulness Eating</a></li>
