--- a/index.html
+++ b/index.html
@@ -152,27 +152,6 @@
 </div>
 <div class="col-12 col-lg-8">
 <div class="row js-layout-row">
-<div class="col-12 isotope-item js-id-single-cell js-id-RNA-sequencing js-id-High-Performance-Computing js-id-Parallel">
-<div class="media stream-item view-compact">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/project/severo/>Severo.jl</a>
-</div>
-<a href=/project/severo/ class=summary-link>
-<div class=article-style>
-Software package for scalable analysis and exploration of single-cell RNA-seq datasets
-</div>
-</a>
-<div class="stream-meta article-metadata">
-</div>
-</div>
-<div class=ml-3>
-<a href=/project/severo/>
-<img src=/project/severo/featured_hucb3cf7d7d3e23a40ecec12be04a5b7c8_129281_150x0_resize_q75_h2_lanczos.webp height=98 width=150 alt=Severo.jl loading=lazy>
-</a>
-</div>
-</div>
-</div>
 <div class="col-12 isotope-item">
 <div class="media stream-item view-compact">
 <div class=media-body>
@@ -190,6 +169,27 @@ We investigate the mechanisms underpinning excessive avoidance behaviors in Anor
 <div class=ml-3>
 <a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/avoid-food-to-control-fear target=_blank rel=noopener>
 <img src=/project/hpc/featured_hue540b11a67bd9cb39e059f545e8bf649_5639876_150x0_resize_q75_h2_lanczos.webp height=100 width=150 alt="Avoid food to control fear" loading=lazy>
+</a>
+</div>
+</div>
+</div>
+<div class="col-12 isotope-item">
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/project/severo/>The neurocircuitry of relief in pathological avoidance</a>
+</div>
+<a href=/project/severo/ class=summary-link>
+<div class=article-style>
+We are examining how the brain of individuals with an obsessive-compulsive disorder processes relief during avoidance learning.
+</div>
+</a>
+<div class="stream-meta article-metadata">
+</div>
+</div>
+<div class=ml-3>
+<a href=/project/severo/>
+<img src=/project/severo/featured_hucb3cf7d7d3e23a40ecec12be04a5b7c8_129281_150x0_resize_q75_h2_lanczos.webp height=98 width=150 alt="The neurocircuitry of relief in pathological avoidance" loading=lazy>
 </a>
 </div>
 </div>
