--- a/project/index.html
+++ b/project/index.html
@@ -131,9 +131,9 @@ We are examining how the brain of individuals with an obsessive-compulsive disor
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/project/diffmem/>The power of hunger</a>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-power-of-hunger target=_blank rel=noopener>The power of hunger</a>
 </div>
-<a href=/project/diffmem/ class=summary-link>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-power-of-hunger target=_blank rel=noopener class=summary-link>
 <div class=article-style>
 Fasting bolster brainpower. We are investigating fasting&rsquo;s effects on instrumental avoidance learning and error-based learning (fear extinction).
 </div>
@@ -142,7 +142,7 @@ Fasting bolster brainpower. We are investigating fasting&rsquo;s effects on inst
 </div>
 </div>
 <div class=ml-3>
-<a href=/project/diffmem/>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-power-of-hunger target=_blank rel=noopener>
 <img src=/project/diffmem/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_224363_150x0_resize_q75_h2_lanczos.webp height=84 width=150 alt="The power of hunger" loading=lazy>
 </a>
 </div>
