--- a/project/index.html
+++ b/project/index.html
@@ -112,9 +112,9 @@ We investigate the mechanisms underpinning excessive avoidance behaviors in Anor
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/project/severo/>The neurocircuitry of relief in pathological avoidance</a>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-neurocircuitry-of-relief-in-pathological-avoidance target=_blank rel=noopener>The neurocircuitry of relief in pathological avoidance</a>
 </div>
-<a href=/project/severo/ class=summary-link>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-neurocircuitry-of-relief-in-pathological-avoidance target=_blank rel=noopener class=summary-link>
 <div class=article-style>
 We are examining how the brain of individuals with an obsessive-compulsive disorder processes relief during avoidance learning.
 </div>
@@ -123,7 +123,7 @@ We are examining how the brain of individuals with an obsessive-compulsive disor
 </div>
 </div>
 <div class=ml-3>
-<a href=/project/severo/>
+<a href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-neurocircuitry-of-relief-in-pathological-avoidance target=_blank rel=noopener>
 <img src=/project/severo/featured_hucb3cf7d7d3e23a40ecec12be04a5b7c8_129281_150x0_resize_q75_h2_lanczos.webp height=98 width=150 alt="The neurocircuitry of relief in pathological avoidance" loading=lazy>
 </a>
 </div>
