--- a/project/severo/index.html
+++ b/project/severo/index.html
@@ -96,6 +96,7 @@ Oct 23, 2018
 </span>
 </div>
 <div class="btn-links mb-3">
+<a class="btn btn-outline-primary my-1" href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-neurocircuitry-of-relief-in-pathological-avoidance target=_blank rel=noopener>Go to Project Site</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://ppw.kuleuven.be/lbp/Bramlab/Research/the-neurocircuitry-of-relief-in-pathological-avoidance target=_blank rel=noopener>
 <i class="fab fa-github mr-1"></i>Source code</a>
 </div>
