deploy: bef9979a0feb14fd87c377dd5da6eaa4ca8e31a7

--- a/404.html
+++ b/404.html
@@ -96,10 +96,10 @@
 <li><a href=/talk/example-talk/>Example Talk</a></li>
 <li><a href=/slides/example/>Slides</a></li>
 <li><a href=/slides/>Slides</a></li>
-<li><a href=/project/severo/>The neurocircuitry of relief in pathological avoidance</a></li>
+<li><a href=/project/ocd/>The neurocircuitry of relief in pathological avoidance</a></li>
 <li><a href=/project/>Projects</a></li>
-<li><a href=/project/hpc/>Avoid food to control fear</a></li>
-<li><a href=/project/diffmem/>The power of hunger</a></li>
+<li><a href=/project/anorexia/>Avoid food to control fear</a></li>
+<li><a href=/project/fasting/>The power of hunger</a></li>
 <li><a href=/mindfulness/>Mindfulness Eating</a></li>
 <li><a href=/publication/>Publications</a></li>
 </ul>
