--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
 <i class="fab fa-linkedin big-icon"></i>
 </a>
 </li>
+<li>
+<a href=/uploads/resume.pdf aria-label=cv>
+<i class="ai ai-cv big-icon"></i>
+</a>
+</li>
 </ul>
 </div>
 </div>
@@ -134,7 +139,7 @@
 <div class=article-style>
 <p>Silvia Papalini is a Ph.D. student currently working at the KULeuven University, Belgium, and a Mindful Eating teacher in training since 2018. Her area of research focuses on fear and reward-based learning within the context of nutritional and behavioral neuroscience (functional Magnetic Resonance Imaging, fMRI), fasting and stress.</p>
 <p>
-<i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/uploads/demo_resume.pdf target=_blank>resumé</a>.</p>
+<i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/uploads/resume.pdf target=_blank>CV</a>.</p>
 </div>
 <div class=row>
 </div>
