--- a/mindfulness/index.html
+++ b/mindfulness/index.html
@@ -97,7 +97,7 @@
 <p>What is mindfullness eating?
 &ldquo;Mindful eating involves paying full attention to the experience of eating and drinking, both inside and outside the body&mldr;We notice how eating affects our mood and how our emotions like anxiety influence our eating. Gradually we regain the sense of ease and freedom with eating that we had in childhood. It is our natural birthright.&rdquo; (cit. by Jan Chozen Bays and Char Wilkins).</p>
 <p>I was introduced to Mindfulness Eating by Caroline Baerten, one of the most insiring persons I ever met in my live. She followed me during my course in Mindful Based Stress Reduction (MBRS) in Brussel, and, as simple it migth sound, I found myself fully connected to the ZEN-based phylosophy of this practice. I then felt that a formative mindful path that was closer to my research interest, passions, and values, was really needed. Hence, I flew to Norway where I had the immense pleasure to attend the Mindful Eating-Conscious Living training with Jan Chozen Bays and Char Wilkins (<a href=https://me-cl.com/our-story/%29 target=_blank rel=noopener>https://me-cl.com/our-story/)</a>, the gretest experience of my life.</p>
-<p>My wish for the future? To reach excellent research output that can be used to improve the outcome of this valuable practice.</p>
+<p>My wish for the future? To reach excellent research output that can be used to improve the results of this valuable practice.</p>
 </div>
 </div>
 </article>
