--- a/index.html
+++ b/index.html
@@ -221,6 +221,26 @@ Fasting bolster brainpower. We are investigating fasting&rsquo;s effects on inst
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span>
+Iris Lange</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Bram Vervliet</span>
+</div>
+<span class=article-date>
+October 2021
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Current Opinion
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span class=author-highlighted>
 Silvia Papalini</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Equal contribution"></i>, <span>
 Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Equal contribution"></i>
