--- a/404.html
+++ b/404.html
@@ -94,14 +94,14 @@
 <ul>
 <li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/example-talk/>Example Talk</a></li>
+<li><a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
+<li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
+<li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
+<li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
+<li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
 <li><a href=/slides/example/>Slides</a></li>
-<li><a href=/slides/>Slides</a></li>
-<li><a href=/project/ocd/>The neurocircuitry of relief in pathological avoidance</a></li>
-<li><a href=/project/>Projects</a></li>
-<li><a href=/project/anorexia/>Avoid food to control fear</a></li>
-<li><a href=/project/fasting/>The power of hunger</a></li>
 </ul>
 </div>
 </div>
