--- a/index.html
+++ b/index.html
@@ -221,6 +221,28 @@ Fasting bolster brainpower. We are investigating fasting&rsquo;s effects on inst
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Laura Neefs</span>, <span>
+Tom Beckers</span>, <span>
+Lukas Van Oudenhove</span>, <span>
+Bram Vervliet</span>
+</div>
+<span class=article-date>
+October 2021
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+PsyArXiv
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span>
 Iris Lange</span>, <span class=author-highlighted>
 Silvia Papalini</span>, <span>
@@ -242,30 +264,86 @@ Current Opinion
 <div class=article-metadata>
 <div>
 <span class=author-highlighted>
-Silvia Papalini</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Equal contribution"></i>, <span>
-Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Equal contribution"></i>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Laurens Claes</span>, <span>
+Bram Vervliet</span>
 </div>
 <span class=article-date>
-July 2013
+July 2021
 </span>
 <span class=middot-divider></span>
 <span class=pub-publication>
-In <em>ICW</em>
+Behaviour Research and Therapy
 </span>
 </div>
-<a href=/publication/example/>
-<div class=img-hover-zoom>
-<img src=/publication/example/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_312700_808x455_fill_q75_h2_lanczos_smart1.webp height=455 width=808 class=article-banner alt="An example conference paper" loading=lazy>
-</div>
-</a>
 <div class="section-subheading article-title mb-1 mt-3">
-<a href=/publication/example/>An example conference paper</a>
+<a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
 </div>
-<a href=/publication/example/ class=summary-link>
-<div class=article-style>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat. Proin tincidunt magna sed ex sollicitudin condimentum.</p>
 </div>
-</a>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>
+</div>
+<span class=article-date>
+April 2021
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+BMC Neuroscience
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span>
+Mirjam Bloemendaal</span>, <span>
+Joanna Szopinska-Tokov</span>, <span>
+Clara Belzer</span>, <span>
+David Boverhoff</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Franziska Michels</span>, <span>
+Saskia van Hemert</span>, <span>
+Alejandro Arias Vasquez</span>, <span>
+Esther Aarts</span>
+</div>
+<span class=article-date>
+April 2021
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Translational Psychiatry
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Bram Vervliet</span>
+</div>
+<span class=article-date>
+April 2020
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Translational Psychiatry
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a>
+</div>
 </div>
 </div>
 </div>
