--- a/project/anorexia/index.html
+++ b/project/anorexia/index.html
@@ -104,6 +104,48 @@ Oct 23, 2018
 <p>Individuals suffering from Anorexia Nervosa (AN) express clinical fear of gain weight and adopt extreme (life-threatening) avoidance behaviors that aim to maintain or reduce body weight. Differently from healthy individuals, in AN hunger seems to be perceived as a threat rather than a motivational drive for food intake. Hence, the anorexic subject avoids food and increases avoidance behaviors (e.g. exercising) to prevent /control the consequences of hunger (i.e. weight gain). Unlike excessive avoidance that characterizes other anxiety-related psychopathologies, excessive avoidance in AN has been often conceptualized as a personality trait (harm avoidance). Yet, a deeper mechanistic understanding of avoidance behaviors in AN is missing in literature. In this project, we are employing an avoidance-relief task (ART) to investigate the presence of excessive avoidance (and the possible over-reinforcing effects of relief on its course) in individuals with a diagnosis of AN.</p>
 </div>
 <div class="project-related-pages content-widget-hr">
+<h2>Publications</h2>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Laurens Claes</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+Mirjam Bloemendaal</span>, <span>
+Joanna Szopinska-Tokov</span>, <span>
+Clara Belzer</span>, <span>
+David Boverhoff</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Franziska Michels</span>, <span>
+Saskia van Hemert</span>, <span>
+Alejandro Arias Vasquez</span>, <span>
+Esther Aarts</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
 </div>
 </div>
 </article>
