--- a/project/fasting/index.html
+++ b/project/fasting/index.html
@@ -107,6 +107,26 @@ May 23, 2018
 <p>Emerging evidence indicates that fasting triggers a cascade of chemical events able to sensitize the mesolimbic dopaminergic brain, the system which tunes learning signals. Consequently, this project investigates the effects of overnight fasting (16h) on two different dopamine-based types of learning, both highly relevant in anxiety-related disorders: instrumental avoidance learning and fear extinction learning. Given that fasting enhances the representational value of a reward (i.e. food and money), we are additionally examining if the effects of fasting transfer to other types of reinforcers, as so, to relief from threat omission. Specifically, since exaggerating relief from threat omission might over-reinforce instrumental avoidance in the clinical population, in this study we examine is fasting increases relief, and, consequently, avoidance behaviors.</p>
 </div>
 <div class="project-related-pages content-widget-hr">
+<h2>Publications</h2>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Laura Neefs</span>, <span>
+Tom Beckers</span>, <span>
+Lukas Van Oudenhove</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
 </div>
 </div>
 </article>
