--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -107,6 +107,79 @@ Bram Vervliet</span>
 <div class=ml-3>
 </div>
 </div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Laurens Claes</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+Mirjam Bloemendaal</span>, <span>
+Joanna Szopinska-Tokov</span>, <span>
+Clara Belzer</span>, <span>
+David Boverhoff</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Franziska Michels</span>, <span>
+Saskia van Hemert</span>, <span>
+Alejandro Arias Vasquez</span>, <span>
+Esther Aarts</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
 </div>
 </div>
 <div class=page-footer>
