--- a/publication/index.html
+++ b/publication/index.html
@@ -92,7 +92,7 @@
 <div class=universal-wrapper>
 <div class=row>
 <div class=col-lg-12>
-<div class=article-style><p>For a full list, see <a href="https://scholar.google.com/citations?user=tTjcVeMAAAAJ" target=_blank rel=noopener>my Google Scholar page</a>.</p>
+<div class=article-style><p>For a full list, see <a href=https://www.researchgate.net/profile/Silvia-Papalini-2 target=_blank rel=noopener>my Researchgate page</a>.</p>
 </div>
 <div class="form-row mb-4">
 <div class=col-auto>
