deploy: 2d619d21841be1990a8aa5b70ead54245ce2ad9d

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ PsyArXiv
 </span>
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
-<a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>
+<a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a>
 </div>
 </div>
 <div class="card-simple view-card">
