--- a/publication/index.html
+++ b/publication/index.html
@@ -126,12 +126,14 @@ Lukas Van Oudenhove</span>, <span>
 Bram Vervliet</span>
 </span>
 (2021).
-<a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a>.
+<a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a>.
 PsyArXiv.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=/project/fasting/>
 Project
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://psyarxiv.com/muz38/ target=_blank rel=noopener>
+PsyArXiv</a>
 </p>
 </div>
 </div>
