--- a/404.html
+++ b/404.html
@@ -94,8 +94,8 @@
 <ul>
 <li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/example-talk/>Example Talk</a></li>
-<li><a href=/publication/fasting/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
 <li><a href=/publication/>Publications</a></li>
+<li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
 <li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
 <li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
 <li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
