--- a/index.html
+++ b/index.html
@@ -174,6 +174,28 @@ PsyArXiv
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+M Ashoori,</span>, <span>
+J Zaman 3,</span>, <span>
+Tom Beckers</span>, <span>
+Bram Vervliet</span>
+</div>
+<span class=article-date>
+October 2021
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Behaviour Research and Therapy
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span>
 Iris Lange</span>, <span class=author-highlighted>
 Silvia Papalini</span>, <span>
