deploy: 172a4437b03cebee22c5a7bfa269dcaeab5d7926

--- a/404.html
+++ b/404.html
@@ -95,13 +95,13 @@
 <li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/example-talk/>Example Talk</a></li>
 <li><a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a></li>
+<li><a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
 <li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
 <li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
 <li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
 <li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
-<li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
 </ul>
 </div>
 </div>
