--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -93,6 +93,31 @@
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Stijn Michielse</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Bram Vervliet</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Liesbet Goossens</span>, <span>
+Koen Schruers</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a>
 </div>
 <div class="stream-meta article-metadata">
