--- a/publication/index.html
+++ b/publication/index.html
@@ -132,6 +132,33 @@ Behaviour Research and Therapy.
 </p>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Stijn Michielse</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Bram Vervliet</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Liesbet Goossens</span>, <span>
+Koen Schruers</span>
+</span>
+(2021).
+<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>.
+Progress in Neuro-Psychopharmacology and Biological Psychiatry.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.pnpbp.2019.02.002 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2021">
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
