--- a/index.html
+++ b/index.html
@@ -176,34 +176,6 @@ PsyArXiv
 <div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
-Iris Lange</span>, <span>
-Jindra Bakker</span>, <span>
-Stijn Michielse</span>, <span>
-Machteld Marcelis</span>, <span>
-Marieke Wichers</span>, <span>
-Bram Vervliet</span>, <span>
-Jim van Os</span>, <span>
-Therese Van Amelsvoort</span>, <span>
-Liesbet Goossens</span>, <span>
-Koen Schruers</span>
-</div>
-<span class=article-date>
-October 2021
-</span>
-<span class=middot-divider></span>
-<span class=pub-publication>
-Progress in Neuro-Psychopharmacology and Biological Psychiatry
-</span>
-</div>
-<div class="section-subheading article-title mb-1 mt-3">
-<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>
-</div>
-</div>
-<div class="card-simple view-card">
-<div class=article-metadata>
-<div>
-<span class=author-highlighted>
-Silvia Papalini</span>, <span>
 M Ashoori,</span>, <span>
 J Zaman 3,</span>, <span>
 Tom Beckers</span>, <span>
@@ -324,6 +296,34 @@ Translational Psychiatry
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
 <a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Stijn Michielse</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Bram Vervliet</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Liesbet Goossens</span>, <span>
+Koen Schruers</span>
+</div>
+<span class=article-date>
+January 0001
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Prog Neuropsychopharmacol Biol Psychiatry
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>
 </div>
 </div>
 </div>
