--- a/publication/index.html
+++ b/publication/index.html
@@ -110,6 +110,8 @@ Preprint
 2021
 </option><option value=.year-2020>
 2020
+</option><option value=.year-0001>
+0001
 </option></select>
 </div>
 </div>
@@ -129,33 +131,6 @@ Bram Vervliet</span>
 <a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a>.
 Behaviour Research and Therapy.
 <p>
-</p>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
-<div class="pub-list-item view-citation" style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span class=author-highlighted>
-Silvia Papalini</span>, <span>
-Iris Lange</span>, <span>
-Jindra Bakker</span>, <span>
-Stijn Michielse</span>, <span>
-Machteld Marcelis</span>, <span>
-Marieke Wichers</span>, <span>
-Bram Vervliet</span>, <span>
-Jim van Os</span>, <span>
-Therese Van Amelsvoort</span>, <span>
-Liesbet Goossens</span>, <span>
-Koen Schruers</span>
-</span>
-(2021).
-<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>.
-Progress in Neuro-Psychopharmacology and Biological Psychiatry.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.pnpbp.2019.02.002 target=_blank rel=noopener>
-DOI
-</a>
 </p>
 </div>
 </div>
@@ -283,6 +258,33 @@ Bram Vervliet</span>
 Translational Psychiatry.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1038/s41398-020-0814-x target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-0001">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Stijn Michielse</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Bram Vervliet</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Liesbet Goossens</span>, <span>
+Koen Schruers</span>
+</span>
+(0001).
+<a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>.
+Prog Neuropsychopharmacol Biol Psychiatry.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.pnpbp.2019.02.002 target=_blank rel=noopener>
 DOI
 </a>
 </p>
