--- a/publication/index.html
+++ b/publication/index.html
@@ -116,24 +116,6 @@ Preprint
 </div>
 </div>
 <div id=container-publications>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
-<div class="pub-list-item view-citation" style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span class=author-highlighted>
-Silvia Papalini</span>, <span>
-M Ashoori,</span>, <span>
-J Zaman 3,</span>, <span>
-Tom Beckers</span>, <span>
-Bram Vervliet</span>
-</span>
-(2021).
-<a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a>.
-Behaviour Research and Therapy.
-<p>
-</p>
-</div>
-</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2021">
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
@@ -239,6 +221,27 @@ Translational Psychiatry.
 Project
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1038/s41398-021-01404-9 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+M Ashoori,</span>, <span>
+J Zaman 3,</span>, <span>
+Tom Beckers</span>, <span>
+Bram Vervliet</span>
+</span>
+(2021).
+<a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a>.
+Behaviour Research and Therapy.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.brat.2021.103816 target=_blank rel=noopener>
 DOI
 </a>
 </p>
