deploy: d7738c2b284cf7a25c111ba09da40e8dca072f08

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -202,6 +202,34 @@ Bram Vervliet</span>
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+Iris Lange</span>, <span>
+Liesbet Goossens</span>, <span>
+Stijn Michielse</span>, <span>
+Jindra Bakker</span>, <span>
+Shmuel Lissek</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Nicole Leibold</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>
 </div>
 <div class="stream-meta article-metadata">
