--- a/publication/index.html
+++ b/publication/index.html
@@ -110,6 +110,8 @@ Preprint
 2021
 </option><option value=.year-2020>
 2020
+</option><option value=.year-2017>
+2017
 </option><option value=.year-0001>
 0001
 </option></select>
@@ -261,6 +263,36 @@ Bram Vervliet</span>
 Translational Psychiatry.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1038/s41398-020-0814-x target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+Iris Lange</span>, <span>
+Liesbet Goossens</span>, <span>
+Stijn Michielse</span>, <span>
+Jindra Bakker</span>, <span>
+Shmuel Lissek</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Nicole Leibold</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>
+</span>
+(2017).
+<a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>.
+Social Cognitive and Affective Neuroscience.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1093/scan/nsx104 target=_blank rel=noopener>
 DOI
 </a>
 </p>
