--- a/index.html
+++ b/index.html
@@ -301,6 +301,37 @@ Translational Psychiatry
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span>
+Iris Lange</span>, <span>
+Liesbet Goossens</span>, <span>
+Stijn Michielse</span>, <span>
+Jindra Bakker</span>, <span>
+Shmuel Lissek</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Nicole Leibold</span>, <span>
+Machteld Marcelis</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Jim van Os</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>
+</div>
+<span class=article-date>
+November 2017
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Social Cognitive and Affective Neuroscience
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
 Iris Lange</span>, <span>
