deploy: 1d64bac13f853f01839ea19a42b9cf037b8c1363

--- a/index.html
+++ b/index.html
@@ -332,6 +332,25 @@ Social Cognitive and Affective Neuroscience
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span>
+Stijn Michielse</span>, <span>
+Janneke Roelofs</span>
+</div>
+<span class=article-date>
+March 2017
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Schizophrenia Bulletin
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
 Iris Lange</span>, <span>
