--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -230,6 +230,22 @@ Koen Schruers</span>
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+Stijn Michielse</span>, <span>
+Janneke Roelofs</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/publication/exposure/>The predictive value of neural reward processing on exposure therapy outcome: Results from a randomized controlled trial</a>
 </div>
 <div class="stream-meta article-metadata">
