--- a/publication/index.html
+++ b/publication/index.html
@@ -298,6 +298,24 @@ DOI
 </p>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+Stijn Michielse</span>, <span>
+Janneke Roelofs</span>
+</span>
+(2017).
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>.
+Schizophrenia Bulletin.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1093/schbul/sbx021.206 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-0001">
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
