deploy: 0c2e0ed15878425599d01ee82656e19bd07e1836

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -202,6 +202,33 @@ Bram Vervliet</span>
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+Stijn Michielse</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Liesbet Goossens</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>, <span>
+Jim van Os</span>, <span>
+Graham Murray</span>, <span>
+Machteld Marcelis</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>
 </div>
 <div class="stream-meta article-metadata">
@@ -221,22 +248,6 @@ Ritsaert Lieverse</span>, <span>
 Jim van Os</span>, <span>
 Therese Van Amelsvoort</span>, <span>
 Koen Schruers</span>
-</div>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-<div class="media stream-item view-compact">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
-</div>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-Stijn Michielse</span>, <span>
-Janneke Roelofs</span>
 </div>
 </div>
 </div>
