--- a/publication/index.html
+++ b/publication/index.html
@@ -110,6 +110,8 @@ Preprint
 2021
 </option><option value=.year-2020>
 2020
+</option><option value=.year-2019>
+2019
 </option><option value=.year-2017>
 2017
 </option><option value=.year-0001>
@@ -268,6 +270,35 @@ DOI
 </p>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+Stijn Michielse</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Liesbet Goossens</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>, <span>
+Jim van Os</span>, <span>
+Graham Murray</span>, <span>
+Machteld Marcelis</span>
+</span>
+(2019).
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>.
+European Neuropsychopharmacology.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.euroneuro.2019.10.002 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
@@ -293,24 +324,6 @@ Koen Schruers</span>
 Social Cognitive and Affective Neuroscience.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1093/scan/nsx104 target=_blank rel=noopener>
-DOI
-</a>
-</p>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
-<div class="pub-list-item view-citation" style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-Stijn Michielse</span>, <span>
-Janneke Roelofs</span>
-</span>
-(2017).
-<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>.
-Schizophrenia Bulletin.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1093/schbul/sbx021.206 target=_blank rel=noopener>
 DOI
 </a>
 </p>
