--- a/index.html
+++ b/index.html
@@ -302,6 +302,36 @@ Translational Psychiatry
 <div class=article-metadata>
 <div>
 <span>
+Stijn Michielse</span>, <span>
+Iris Lange</span>, <span>
+Jindra Bakker</span>, <span>
+Liesbet Goossens</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Simone Verhagen</span>, <span>
+Marieke Wichers</span>, <span>
+Ritsaert Lieverse</span>, <span>
+Therese Van Amelsvoort</span>, <span>
+Koen Schruers</span>, <span>
+Jim van Os</span>, <span>
+Graham Murray</span>, <span>
+Machteld Marcelis</span>
+</div>
+<span class=article-date>
+December 2019
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+European Neuropsychopharmacology
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span>
 Iris Lange</span>, <span>
 Liesbet Goossens</span>, <span>
 Stijn Michielse</span>, <span>
@@ -327,25 +357,6 @@ Social Cognitive and Affective Neuroscience
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
 <a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>
-</div>
-</div>
-<div class="card-simple view-card">
-<div class=article-metadata>
-<div>
-<span>
-Stijn Michielse</span>, <span>
-Janneke Roelofs</span>
-</div>
-<span class=article-date>
-March 2017
-</span>
-<span class=middot-divider></span>
-<span class=pub-publication>
-Schizophrenia Bulletin
-</span>
-</div>
-<div class="section-subheading article-title mb-1 mt-3">
-<a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a>
 </div>
 </div>
 <div class="card-simple view-card">
