deploy: ef7bb15c2e353153382d35c2f98a636b9dedde76

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -229,6 +229,28 @@ Machteld Marcelis</span>
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/stress/>Stress matters: Randomized controlled trial on the effect of probiotics on neurocognition</a>
+</div>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+F Michels</span>, <span>
+N Kohn</span>, <span>
+J Wegman</span>, <span>
+S van Hemert</span>, <span>
+K Roelofs</span>, <span>
+A Arias-Vasquez</span>, <span>
+E Aarts</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/publication/separation/>Behavioral pattern separation and its link to the neural mechanisms of fear generalization</a>
 </div>
 <div class="stream-meta article-metadata">
