--- a/index.html
+++ b/index.html
@@ -331,6 +331,31 @@ European Neuropsychopharmacology
 <div class="card-simple view-card">
 <div class=article-metadata>
 <div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+F Michels</span>, <span>
+N Kohn</span>, <span>
+J Wegman</span>, <span>
+S van Hemert</span>, <span>
+K Roelofs</span>, <span>
+A Arias-Vasquez</span>, <span>
+E Aarts</span>
+</div>
+<span class=article-date>
+December 2018
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Current Opinion
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/stress/>Stress matters: Randomized controlled trial on the effect of probiotics on neurocognition</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
 <span>
 Iris Lange</span>, <span>
 Liesbet Goossens</span>, <span>
