--- a/publication/index.html
+++ b/publication/index.html
@@ -112,6 +112,8 @@ Preprint
 2020
 </option><option value=.year-2019>
 2019
+</option><option value=.year-2018>
+2018
 </option><option value=.year-2017>
 2017
 </option><option value=.year-0001>
@@ -294,6 +296,30 @@ Machteld Marcelis</span>
 European Neuropsychopharmacology.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.euroneuro.2019.10.002 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+F Michels</span>, <span>
+N Kohn</span>, <span>
+J Wegman</span>, <span>
+S van Hemert</span>, <span>
+K Roelofs</span>, <span>
+A Arias-Vasquez</span>, <span>
+E Aarts</span>
+</span>
+(2018).
+<a href=/publication/stress/>Stress matters: Randomized controlled trial on the effect of probiotics on neurocognition</a>.
+Current Opinion.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.ynstr.2018.100141 target=_blank rel=noopener>
 DOI
 </a>
 </p>
