deploy: 344b428fcd46b55e7c4fc5916131bab81d845604

--- a/publication/index.html
+++ b/publication/index.html
@@ -103,6 +103,8 @@
 Journal article
 </option><option value=.pubtype-3>
 Preprint
+</option><option value=.pubtype-6>
+Book section
 </option></select>
 </div>
 <div class=col-auto>
@@ -350,6 +352,28 @@ Koen Schruers</span>
 Social Cognitive and Affective Neuroscience.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1093/scan/nsx104 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-6 year-2017">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Mark Berthold-Losleben</span>, <span>
+Nils Kohn</span>
+</span>
+(2017).
+<a href=/publication/prolonged/>Influences of Prolonged Fasting on Behavioral and Brain Patterns</a>.
+Handbook of Famine, Starvation, and Nutrient Deprivation.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/project/fasting/>
+Project
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/http://dx.doi.org/10.1007/978-3-319-40007-5_30-1 target=_blank rel=noopener>
 DOI
 </a>
 </p>
