--- a/index.html
+++ b/index.html
@@ -389,6 +389,26 @@ Social Cognitive and Affective Neuroscience
 <div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
+Mark Berthold-Losleben</span>, <span>
+Nils Kohn</span>
+</div>
+<span class=article-date>
+January 2017
+</span>
+<span class=middot-divider></span>
+<span class=pub-publication>
+Handbook of Famine, Starvation, and Nutrient Deprivation
+</span>
+</div>
+<div class="section-subheading article-title mb-1 mt-3">
+<a href=/publication/prolonged/>Influences of Prolonged Fasting on Behavioral and Brain Patterns</a>
+</div>
+</div>
+<div class="card-simple view-card">
+<div class=article-metadata>
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
 Iris Lange</span>, <span>
 Jindra Bakker</span>, <span>
 Stijn Michielse</span>, <span>
