deploy: 715f5f57ea201dd70fbd4b097f4025e087d7afe5

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ December 2018
 </span>
 <span class=middot-divider></span>
 <span class=pub-publication>
-Current Opinion
+Neurobiology of Stress
 </span>
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
