--- a/publication/index.html
+++ b/publication/index.html
@@ -319,7 +319,7 @@ E Aarts</span>
 </span>
 (2018).
 <a href=/publication/stress/>Stress matters: Randomized controlled trial on the effect of probiotics on neurocognition</a>.
-Current Opinion.
+Neurobiology of Stress.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.ynstr.2018.100141 target=_blank rel=noopener>
 DOI
