--- a/publication/stress/index.html
+++ b/publication/stress/index.html
@@ -135,7 +135,7 @@ Journal article
 <div class=col-md-10>
 <div class=row>
 <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-<div class="col-12 col-md-9">Current Opinion in Psychology</div>
+<div class="col-12 col-md-9">Neurobiology of Stress</div>
 </div>
 </div>
 <div class=col-md-1></div>
